{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 40,
  "lineage": "9eee4297-43dc-9d5d-ed4c-05233da218a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdf2e5a9e4b103d7",
            "arn": "arn:aws:ec2:ap-south-1:879381241087:elastic-ip/eipalloc-0cdf2e5a9e4b103d7",
            "association_id": "eipassoc-0d000ffde70dfa0cb",
            "domain": "vpc",
            "id": "eipalloc-0cdf2e5a9e4b103d7",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-085f101c22591611a",
            "private_dns": "ip-10-0-1-250.ap-south-1.compute.internal",
            "private_ip": "10.0.1.250",
            "public_dns": "ec2-13-205-121-171.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.205.121.171",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "repo": "jan26-bootcamp",
              "terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879381241087:internet-gateway/igw-0d8ad9ff27bef7645",
            "id": "igw-0d8ad9ff27bef7645",
            "owner_id": "879381241087",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main",
              "repo": "jan26-bootcamp",
              "terraform": "true"
            },
            "vpc_id": "vpc-031c045aa5bc17da4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdf2e5a9e4b103d7",
            "association_id": "eipassoc-0d000ffde70dfa0cb",
            "connectivity_type": "public",
            "id": "nat-0637505e95d390504",
            "network_interface_id": "eni-085f101c22591611a",
            "private_ip": "10.0.1.250",
            "public_ip": "13.205.121.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09f3a5886e3085931",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT",
              "repo": "jan26-bootcamp",
              "terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879381241087:route-table/rtb-0daf3acb4d80322f8",
            "id": "rtb-0daf3acb4d80322f8",
            "owner_id": "879381241087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0637505e95d390504",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private RT"
            },
            "tags_all": {
              "Name": "private RT",
              "repo": "jan26-bootcamp",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-031c045aa5bc17da4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.primary",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879381241087:route-table/rtb-0970a2ff1446e4c8b",
            "id": "rtb-0970a2ff1446e4c8b",
            "owner_id": "879381241087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8ad9ff27bef7645",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public RT"
            },
            "tags_all": {
              "Name": "public RT",
              "repo": "jan26-bootcamp",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-031c045aa5bc17da4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdf64c6a782ee177",
            "route_table_id": "rtb-0970a2ff1446e4c8b",
            "subnet_id": "subnet-09f3a5886e3085931"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0950a5c3c27904e65",
            "route_table_id": "rtb-0970a2ff1446e4c8b",
            "subnet_id": "subnet-017384663b1a847c7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fbf4a003ba9b274",
            "route_table_id": "rtb-0daf3acb4d80322f8",
            "subnet_id": "subnet-06edf0854199afe09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.primary",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a615bed09269c9a",
            "route_table_id": "rtb-0daf3acb4d80322f8",
            "subnet_id": "subnet-036cfde8ff14d313c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.primary",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879381241087:subnet/subnet-06edf0854199afe09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06edf0854199afe09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879381241087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jan26week6-private1"
            },
            "tags_all": {
              "Name": "jan26week6-private1",
              "repo": "jan26-bootcamp",
              "terraform": "true"
            },
            "vpc_id": "vpc-031c045aa5bc17da4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879381241087:subnet/subnet-036cfde8ff14d313c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036cfde8ff14d313c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879381241087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jan26week6-private2"
            },
            "tags_all": {
              "Name": "jan26week6-private2",
              "repo": "jan26-bootcamp",
              "terraform": "true"
            },
            "vpc_id": "vpc-031c045aa5bc17da4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879381241087:subnet/subnet-09f3a5886e3085931",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f3a5886e3085931",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "879381241087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jan26week6-public1"
            },
            "tags_all": {
              "Name": "jan26week6-public1",
              "repo": "jan26-bootcamp",
              "terraform": "true"
            },
            "vpc_id": "vpc-031c045aa5bc17da4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879381241087:subnet/subnet-017384663b1a847c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017384663b1a847c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "879381241087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jan26week6-public2"
            },
            "tags_all": {
              "Name": "jan26week6-public2",
              "repo": "jan26-bootcamp",
              "terraform": "true"
            },
            "vpc_id": "vpc-031c045aa5bc17da4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879381241087:subnet/subnet-0701dcfc88db6615f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0701dcfc88db6615f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879381241087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jan26week6-rds1"
            },
            "tags_all": {
              "Name": "jan26week6-rds1",
              "repo": "jan26-bootcamp",
              "terraform": "true"
            },
            "vpc_id": "vpc-031c045aa5bc17da4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879381241087:subnet/subnet-0fb9e11a25509ebc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb9e11a25509ebc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879381241087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jan26week6-rds2"
            },
            "tags_all": {
              "Name": "jan26week6-rds2",
              "repo": "jan26-bootcamp",
              "terraform": "true"
            },
            "vpc_id": "vpc-031c045aa5bc17da4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879381241087:vpc/vpc-031c045aa5bc17da4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c8bfc8a14c3e2c9e",
            "default_route_table_id": "rtb-03a3a9fce43e9f49c",
            "default_security_group_id": "sg-0405e2e7d51c6e14f",
            "dhcp_options_id": "dopt-0f0a5aaa50febe6d0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031c045aa5bc17da4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a3a9fce43e9f49c",
            "owner_id": "879381241087",
            "tags": {
              "Name": "jan26week6"
            },
            "tags_all": {
              "Name": "jan26week6",
              "repo": "jan26-bootcamp",
              "terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}